--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
       </div>
 
       <div class="mobile-drawer" id="mobileMenu">
+        <div class="drawer-header">
+          <button class="drawer-close" type="button" aria-label="إغلاق القائمة">
+            ✕
+          </button>
+        </div>
         <nav class="mobile-nav" aria-label="التنقل عبر الجوال">
           <a href="#services">خدماتنا</a>
           <a href="#equipment">تجهيزاتنا</a>
