--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <meta property="og:image" content="assets/og-image.jpg" />
     <meta property="og:url" content="https://example.com/" />
 
+    <link rel="preload" as="image" href="images/stage.png" fetchpriority="high" />
     <link rel="stylesheet" href="styles.css" />
 
     <script type="application/ld+json">
@@ -194,6 +195,9 @@
                 class="visual-body"
                 src="images/stage.png"
                 alt="استيج مضي ومسارح بتجهيزات احترافية"
+                width="800"
+                height="450"
+                fetchpriority="high"
                 decoding="async"
               />
               <div class="visual-footer">
@@ -207,6 +211,9 @@
                 class="visual-body"
                 src="images/out%20door.png"
                 alt="جلسات خارجية وتراسات بلمسات دافئة"
+                width="800"
+                height="450"
+                fetchpriority="high"
                 decoding="async"
               />
               <div class="visual-footer">
@@ -315,6 +322,8 @@
                 class="theme-image"
                 src="images/store%20open.png"
                 alt="افتتاح متاجر وفعاليات رسمية فاخرة"
+                width="800"
+                height="450"
                 loading="lazy"
                 decoding="async"
               />
@@ -329,6 +338,8 @@
                 class="theme-image"
                 src="images/chairs-show.png"
                 alt="تجهيز قاعات المؤتمرات والمعارض"
+                width="800"
+                height="450"
                 loading="lazy"
                 decoding="async"
               />
@@ -343,6 +354,8 @@
                 class="theme-image"
                 src="images/out%20door.png"
                 alt="فعاليات خارجية ومهرجانات عائلية"
+                width="800"
+                height="450"
                 loading="lazy"
                 decoding="async"
               />
@@ -601,7 +614,10 @@
                   <img
                     src="images/store%20open.png"
                     alt="تجهيز افتتاح المهرجانات والمتاجر"
+                    width="800"
+                    height="450"
                     loading="lazy"
+                    decoding="async"
                   />
                 </div>
                 <div class="slide-label">افتتاح المهرجانات</div>
@@ -611,7 +627,10 @@
                   <img
                     src="images/chairs-show.png"
                     alt="كراسي فندقية وتجهيزات المؤتمرات"
+                    width="800"
+                    height="450"
                     loading="lazy"
+                    decoding="async"
                   />
                 </div>
                 <div class="slide-label">مؤتمرات ومعارض</div>
@@ -621,7 +640,10 @@
                   <img
                     src="images/stage.png"
                     alt="استيج مضي ومسارح زجاجي حديثة"
+                    width="800"
+                    height="450"
                     loading="lazy"
+                    decoding="async"
                   />
                 </div>
                 <div class="slide-label">استيج مضي ومسارح</div>
@@ -631,7 +653,10 @@
                   <img
                     src="images/out%20door.png"
                     alt="جلسات شعبيه وجلسات ارضيه بتنسيق تراثي"
+                    width="800"
+                    height="450"
                     loading="lazy"
+                    decoding="async"
                   />
                 </div>
                 <div class="slide-label">جلسات شعبية</div>
@@ -641,7 +666,10 @@
                   <img
                     src="images/chairs.png"
                     alt="كنب وكراسي ملكي لكبار الشخصيات"
+                    width="800"
+                    height="450"
                     loading="lazy"
+                    decoding="async"
                   />
                 </div>
                 <div class="slide-label">تجهيزات VIP</div>
@@ -651,7 +679,10 @@
                   <img
                     src="images/liser%202.png"
                     alt="إضاءات ليزر وستي كلر احترافية"
+                    width="800"
+                    height="450"
                     loading="lazy"
+                    decoding="async"
                   />
                 </div>
                 <div class="slide-label">صوتيات وإضاءة</div>
